build/log2
In file included from /home/amsakan/dev/cigarette-smokers/include/Distributor.hh:3,
                 from /home/amsakan/dev/cigarette-smokers/src/Distributor/Distributor.cc:1:
/home/amsakan/dev/cigarette-smokers/include/CS_Context.hh: In function ‘CS_Context newCSContext()’:
/home/amsakan/dev/cigarette-smokers/include/CS_Context.hh:28:9: error: could not convert ‘{(& smokers), (& table), chosenSmoker}’ from ‘<brace-enclosed initializer list>’ to ‘CS_Context’
   28 |         };
      |         ^
      |         |
      |         <brace-enclosed initializer list>
/home/amsakan/dev/cigarette-smokers/src/Distributor/Distributor.cc: In member function ‘void Distributor::run()’:
/home/amsakan/dev/cigarette-smokers/src/Distributor/Distributor.cc:17:50: error: ‘struct std::array<std::counting_semaphore<1>, 3>’ has no member named ‘release’
   17 |                 csContext->smokers[chosenSmoker].release();
      |                                                  ^~~~~~~
gmake[2]: *** [src/Distributor/CMakeFiles/Distributor.dir/build.make:79: src/Distributor/CMakeFiles/Distributor.dir/Distributor.cc.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:203: src/Distributor/CMakeFiles/Distributor.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
